1.61

Fix error with ᎢᏍᎩ- "You one + you all" should read "You one + them and me"
Reduced ᎢᏍᎩ- challenges from 3 to 2 cards.
Fix error with ᏍᎩᏂ- "You one + you two" should read "You one + him and me"
Reduced ᏍᎩᏂ- challenges from 3 to 2 cards.
Added "Level" number calculation to stats.
Added "Level" name to stats.
Addded description of "Level" and "Percentages" to instructions under "Your stats"

1.60

Added option for "session length".
Added option for "initial card time limit"
Fix deck sorting regression caused by code cleanup.
Better main menu display (display fitting).
Removed "View Challenges"
Added "Instructions"
Moved changelog to "assets" folder of app.
Adjusted "ᎢᏨ" to be understandable by 2 English entries.
Append "changelog.txt" to "about.txt" for "About" display.

1.59

Adjusted "ᎢᏍᎩ" and "ᎢᏨ" bound pronoun entries to be understandable as 3 English
entries each instead of 5 English entries each to improve learnability.

Adjusted "ᏍᏛ" bound pronoun entry from 3 English entries to 2 English entries.

This reduces deck size to 1,929 cards.

1.56

Fix for Windows and that stupid "1251-1" charset default Java uses there.

1.54

Dynamic sizing to fit various display sizes better.
Desktop version now auto adjusts layout as you resize.
No more 'letterbox'

1.52

Graphics fixes.
Change "wrong answer" selection logic.
Prepare for eventual Apple Device deployment.
Log when cards are added to active deck
 
1.47

Fix bug in stats save at completion of a session. Added code to try and repair stats if stats are detected as being bad.

1.46

Better handling of back key.

1.45

Adjust when "new cards" are added during a session when currently scheduled cards are well known.

1.44

Fixed issue with "he/she etc" forms not tracking properly for 'correct in a row' calculations to show as actually learned.

Try and reduce 'deck card' memory consumption to prevent out of memory errors.

Switch to using only a single font to reduce memory consumption and out of memory errors.

