@@ -6,7 +6,8 @@ Fix error with ᏍᎩᏂ- "You one + you two" should read "You one + him and me"
 Reduced ᏍᎩᏂ- challenges from 3 to 2 cards.
 Added "Level" number calculation to stats.
 Added "Level" name to stats.
-Addded description of "Level" and "Percentages" to instructions under "Your stats"
+Added description of "Level" and "Percentages" to instructions under "Your stats"
+Added Facebook Stats Posting for "Desktop" edition via web link.
 
 1.60
 
